updated method of creating Integer object.